--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':realm')
     compile project(':react-native-fs')
     compile project(':react-native-image-picker')
     compile project(':react-native-sound')
