--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-device-info": "^0.21.5",
     "react-native-image-picker": "^0.26.10",
     "react-native-sound": "^0.10.9",
-    "react-navigation": "^2.6.2"
+    "react-navigation": "^2.6.2",
+    "realm": "^2.12.0"
   },
   "devDependencies": {
     "babel-jest": "23.2.0",
