--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-native": "0.56.0",
     "react-native-camera": "^1.0.4",
     "react-native-device-info": "^0.21.5",
+    "react-native-fs": "^2.10.14",
     "react-native-image-picker": "^0.26.10",
     "react-native-sound": "^0.10.9",
+    "react-native-zip-archive": "^2.2.6",
     "react-navigation": "^2.6.2",
     "realm": "^2.12.0"
   },
